# UR5_CLIP

./: clip_visual_grounding_multi_obj.py  deep_learning_pipeline.py  deep_learning_server.py  euler_to_quaternion.py  ros_deep_learning_client.py  ros_image_subscriber.py  table_calibration.py
configs/: homography_matrix.json  segmentation_desktop_coords.json  table_config.json
src/: .rosinstall  .rosinstall.bak  video_aruco_final.py
src/clip/: CMakeLists.txt  package.xml
src/clip/scripts/: add_obstacles.py  coordinate_receive.py  ros_deep_learning_client.py  ros_image_subscriber.py  socket_receive.py
src/robot_arm_tools/: CMakeLists.txt  LICENSE  PREEMPT_RT_TUTORIAL.md  README.md  package.xml  requirements.txt  robot_kinematics_plugin.xml  robot_low_level.xml  setup.py
src/robot_arm_tools/action/: JointsValuesTarget.action  JointsValuesWaypoints.action  PoseTarget.action  PoseWaypoints.action
src/robot_arm_tools/config/: multiple_query_planners.yaml
src/robot_arm_tools/launch/: Example.launch  ExampleActions.launch  ExampleGripper.launch  ExampleScan.launch  ExampleSensor.launch  ExampleServo.launch  Sensor.launch  Setup_kuka.launch  Setup_panda.launch  Setup_template.launch  Setup_ur10e.launch  Setup_ur5.launch
src/robot_arm_tools/scripts/: GetRobotDescription.py  GetRobotDescription.sh  GetRobotDescriptionSemantic.py  GetRobotDescriptionSemantic.sh  Initialized.sh
src/robot_arm_tools/src/: MeasurementServer.cpp  NullSpaceExploration.cpp  OKMeasurementServer.cpp  PandaGripper.cpp  PandaLowLevel.cpp  PauseButton.cpp  Robot.cpp  RobotKinematicsPlugin.cpp  (+12 more)
(+96 files in other folders)
